switched to npy, state estimator training loop

--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,7 @@ MANIFEST
 actions.txt
 next_observations.txt
 observations.txt
+actions.npy
+next_observations.npy
+observations.npy
 .vscode/launch.json
